# Game-Programmierung

./: .gitignore  README.md  import pygame.py  main.py  pyproject.toml  uebung_001.py
A2/: pyproject.toml
A3/: pyproject.toml  settings.py  shot.py
A3/assets/: lvl001.rfg
A3/tests/: test_uebung_003.py
A4/: boss.py  pyproject.toml
A4/assets/: lvl001.rfg  lvl002.rfg
A4/tests/: test_uebung_004.py
A_Final/: main.py  pyproject.toml
A_Final/signal_breach/: entities.py  events.py  game.py  levels.py  model.py  rendering.py  scoring.py
A_Final/tests/: test_entities.py  test_game_flow.py  test_main.py  test_model_systems.py
docs/: DOKUMENTATION.md  generate_documentation.py
docs/superpowers/plans/: 2026-06-18-signal-breach.md
docs/superpowers/specs/: 2026-06-18-signal-breach-design.md
signal_breach/: __init__.py  audio.py  config.py  entities.py  game.py  model.py  persistence.py  rendering.py  scoring.py
tests/: test_entities.py  test_game_flow.py  test_main.py  test_model_systems.py  test_uebung_003.py  test_uebung_004.py
uebung_003/: README.md  enemy.py  level.py  main.py  player.py
uebung_004/: README.md  enemy.py  entity.py  level.py  main.py  obstacle.py  player.py  score.py  shop.py
uebung_004/assets/: lvl003.rfg
