[project]
name = "game-programmierung"
version = "0.1.0"
description = "Signal Breach - engine-free vertical arcade shooter built with pygame-ce"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygame-ce>=2.5.7",
]

[project.optional-dependencies]
documentation = [
    "reportlab>=4.4",
]
